--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -27,10 +27,10 @@ jobs:
           node-version: 18.17.0
 
       - name: Install npm packages
-        run: npm install -g bpmnlint
+        run: npm install bpmnlint
 
       - name: Copy custom rules to bpmnlint
-        run: cp -r "${{ inputs.custom-rules-folder }}/"* "$(npm bin -g)/bpmnlint/rules/"
+        run: cp -r "${{ github.workspace }}/custom_rules/"* "$(npm bin)/bpmnlint/rules/"
 
       - name: Copy .bpmnlintrc to BPMN folder
         run: cp "${{ inputs.bpmnlintrc-path }}" "${{ inputs.bpmn-folder }}/.bpmnlintrc"
