--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -36,7 +36,7 @@ jobs:
         run: cp -r "${{ inputs.custom-rules-folder }}" /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
 
       - name: Copy .bpmnlintrc to BPMN folder
-        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/${{ inputs.bpmn-folder }}/.bpmnlintrc"
+        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/${{ inputs.bpmn-file }}"
         
       - name: Run BPMNLint
         run: bpmnlint "${{ inputs.bpmn-file }}"
