--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -38,8 +38,19 @@ jobs:
       - name: Copy .bpmnlintrc to BPMN folder
         run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/${{ inputs.bpmn-file }}"
         
-      - name: Run BPMNLint
-        run: bpmnlint invalid-model.bpmn
+      - name: Run BPMNLint and capture output
+        run: |
+          output=$(bpmnlint "${{ inputs.bpmn-file }}")
+          echo "bpmnlint-output<<EOF" >> $GITHUB_ENV
+          echo "$output" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+        env:
+          BPMN_FILE: ${{ inputs.bpmn-file }}
+
+      - name: Display bpmnlint output
+        run: echo "$bpmnlint-output"
+        env:
+          bpmnlint-output: ${{ env.bpmnlint-output }}
 
 
         
