--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -31,8 +31,9 @@ jobs:
 
       - name: Copy custom rules to bpmnlint
         run: cp -r ${{ inputs.custom-rules-folder }}/ /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
+        
       - name: Copy .bpmnlintrc to BPMN folder
-        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/${{ inputs.bpmn-file-path }}/.bpmnlintrc"
+        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/"
         
       - name: Read BPMN file content
         id: read-bpmn-file
