--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -33,7 +33,7 @@ jobs:
         run: cp -r ${{ inputs.custom-rules-folder }}/ /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
         
       - name: Copy .bpmnlintrc to BPMN folder
-        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ inputs.bpmn-file-path | dirname }}/.bpmnlintrc"
+        run: cp "${{ inputs.bpmnlintrc-path }}" "${{ github.workspace }}/"
         
       - name: Read BPMN file content
         run: |
