--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -31,7 +31,7 @@ jobs:
       
       - name: Read BPMN file content
         run: |
-          cat "${{ github.workspace }}/${{ inputs.bpmn-file-path }}/${{ inputs.bpmn-file-path }}" > bpmn-file-content.txt
+          cat "${{ inputs.bpmn-file-path }}" > bpmn-file-content.txt
           
       - name: Output BPMN file content
         run: cat bpmn-file-content.txt
