--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -39,8 +39,12 @@ jobs:
       - name: Copy custom rules to bpmnlint
         run: cp -r ${{ inputs.custom-rules-folder }}/ /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
         
-      - name: Copy .bpmnlintrc to same directory
-        run: cp -T ".bpmnlintrc" "$(dirname bpmn-file-content.txt)/.bpmnlintrc"
+      - name: Create .bpmnlintrc
+        run: |
+          echo "${{ inputs.bpmnlintrc-path }}" > .bpmnlintrc
+          
+      - name: Output .bpmnlintrc content
+        run: cat .bpmnlintrc
         
       - name: Run BPMNLint
         run: bpmnlint bpmn-file-content.txt
