--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -41,7 +41,7 @@ jobs:
         
       - name: Create .bpmnlintrc
         run: |
-          cat "${{ inputs.bpmnlintrc-path }}" > .bpmnlintrc
+          cp "${{ inputs.bpmnlintrc-path }}" .bpmnlintrc
           
       - name: Output .bpmnlintrc content
         run: cat .bpmnlintrc
