--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -39,12 +39,14 @@ jobs:
       - name: Copy custom rules to bpmnlint
         run: cp -r ${{ inputs.custom-rules-folder }}/ /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
         
-      - name: Create .bpmnlinrc file
+      - name: Create .bpmnlintrc
         run: |
-          cat "${{ inputs.bpmnlintrc-path }}" > bpmnlint-content.txt
-          
+          echo '{
+            "extends": "bpmnlint:recommended"
+          }' > .bpmnlintrc
+
       - name: Output .bpmnlintrc content
-        run: cat bpmnlint-content.txt
+        run: cat .bpmnlintrc
         
       - name: Run BPMNLint
         run: bpmnlint bpmn-file-content.txt
