--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -37,7 +37,9 @@ jobs:
         run: cat bpmn-file-content.bpmn
         
       - name: Copy custom rules to bpmnlint
-        run: cp -r ${{ inputs.custom-rules-folder }} /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
+        run: cp -r ${{ inputs.custom-rules-folder }} $RUNNER_TOOL_CACHE/Node/${{ env.NODE_VERSION }}/x64/lib/node_modules/bpmnlint/rules/
+        env:
+          NODE_VERSION: 14  # Adjust to match the Node.js version above
         
       - name: Create .bpmnlintrc
         run: |
