--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -16,7 +16,10 @@ on:
 jobs:
   validate_bpmn:
     runs-on: ubuntu-latest
-
+    defaults:
+        run:
+          working-directory:
+            validate-bpmn
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,7 +30,10 @@ jobs:
           node-version: 18.17.0
 
       - name: Install npm packages
-        run: npm install -g bpmnlint --prefix ${{ github.workspace }}/bpmnlint
+        run: npm install -g bpmnlint
+        
+      - name: View contents of root directory
+        run: ls -al /
 
       - name: Read BPMN file content
         run: |
@@ -35,9 +41,6 @@ jobs:
           
       - name: Output BPMN file content
         run: cat bpmn-file-content.bpmn
-        
-      - name: Copy custom rules to bpmnlint
-        run: cp -r ${{ inputs.custom-rules-folder }} ${{ github.workspace }}/bpmnlint/rules/
         
       - name: Create .bpmnlintrc
         run: |
@@ -52,6 +55,9 @@ jobs:
 
       - name: Output .bpmnlintrc content
         run: cat .bpmnlintrc
+        
+      - name: Copy custom rules to bpmnlint
+        run: cp -r ${{ inputs.custom-rules-folder }} ${{ github.workspace }}/bpmnlint/rules/
         
       - name: Run BPMNLint (ignore exit code 1)
         run: bpmnlint bpmn-file-content.bpmn || true
