--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -12,36 +12,39 @@ on:
       bpmnlintrc-path: 
         required: true
         type: string
+        
+defaults:
+  run:
+    working-directory:
+      validate-bpmn
 
 jobs:
   validate_bpmn:
     runs-on: ubuntu-latest
-    defaults:
-        run:
-          working-directory:
-            validate-bpmn
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 18x]
 
-      - name: Set up Node.js
+    steps:
+      - name: Install npm packages
+      - uses: actions/checkout@v3
+      - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
-          node-version: 18.17.0
+          node-version: ${{ matrix.node-version }}
+      - run: npm install -g bpmnlint
 
-      - name: Install npm packages
-        run: npm install -g bpmnlint
-        
       - name: View contents of root directory
         run: ls -al /
 
       - name: Read BPMN file content
         run: |
           cat "${{ inputs.bpmn-file-path }}" > bpmn-file-content.bpmn
-          
+
       - name: Output BPMN file content
         run: cat bpmn-file-content.bpmn
-        
+
       - name: Create .bpmnlintrc
         run: |
           echo '{
@@ -55,9 +58,9 @@ jobs:
 
       - name: Output .bpmnlintrc content
         run: cat .bpmnlintrc
-        
+
       - name: Copy custom rules to bpmnlint
         run: cp -r ${{ inputs.custom-rules-folder }} ${{ github.workspace }}/bpmnlint/rules/
-        
+
       - name: Run BPMNLint (ignore exit code 1)
         run: bpmnlint bpmn-file-content.bpmn || true
