--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -27,8 +27,10 @@ jobs:
         node-version: [10.x, 12.x, 14.x, 18x]
 
     steps:
-      - name: Install npm packages
       - uses: actions/checkout@v3
+      - name: Install npm packages
+      
+        uses: actions/checkout@v3
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
