--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -19,48 +19,21 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
           node-version: 18.17.0
 
       - name: Install bpmnlint
         run: npm install -g bpmnlint
+      
+      - name: Install tree
+        run: yum install tree
         
-        
-      - name: Install jq
-        run: sudo apt-get install jq
-
-      - name: Search for bpmnlint directory
-        run: |
-          # Search for the bpmnlint directory using the find command
-          # and save the result in a variable
-          bpmnlint_dir=$(find / -type d -name "bpmnlint" 2>/dev/null)
-
-          # Output the bpmnlint directory path
-          echo "BPMNLint Directory: $bpmnlint_dir"
-
-          # Store the bpmnlint directory path as an output variable
-          echo "BPMNLINT_DIRECTORY=$bpmnlint_dir" >> $GITHUB_ENV
-
-      - name: Use bpmnlint directory path
-        run: |
-          # Use the stored bpmnlint directory path
-          echo "Using BPMNLint Directory: $BPMNLINT_DIRECTORY"   
-
-      - name: View contents of root directory
-        run: ls -la /
-        
-      - name: Search for bpmnlint directory
-        id: search_bpmnlint
-        run: |
-          bpmnlint_dir=$(find / -type d -name "bpmnlint" 2>/dev/null)
-
-          echo "BPMNLint Directory: $bpmnlint_dir"
-
-          echo "BPMNLINT_DIRECTORY=$bpmnlint_dir" >> $GITHUB_ENV   
+      - name: List file structure
+        run: tree
         
       - name: Read BPMN file content
         run: |
