--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -37,12 +37,15 @@ jobs:
         
       - name: List contents of /opt/hostedtoolcache/node/18.17.0/x64/bin
         run: ls -al /opt/hostedtoolcache/node/18.17.0/x64/bin
+        
+      - name: List contents of /opt/hostedtoolcache/node/18.17.0/x64/bin/bpmnlint
+        run: ls -al /opt/hostedtoolcache/node/18.17.0/x64/bin/bpmnlint
 
       - name: Install tree command
         run: sudo apt-get update && sudo apt-get install tree -y
 
       - name: List structure
-        run: tree /opt/hostedtoolcache/node/18.17.0/x64/bin/bpmnlint
+        run: tree /opt/
         
       - name: Read BPMN file content
         run: |
