--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Install tree command
         run: sudo apt-get update && sudo apt-get install tree -y
 
-      - name: List structure
-        run: tree /opt/
+      - name: Search for rules folder
+        run: find / -type d -name "rules" 2>/dev/null
         
       - name: Read BPMN file content
         run: |
