--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -37,17 +37,14 @@ jobs:
       - name: List contents of bpmnlint/rules directory
         run: ls -al /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules
         
-      - name: Read BPMN file content
-        run: |
-          cat "${{ inputs.bpmn-file-path }}" > bpmn-file-content.bpmn
-          
       - name: Copy content of bpmnlintrc-path to .bpmnlintrc
         run: |
           cat "${{ inputs.bpmnlintrc-path }}" > temp_bpmnlintrc
-          mv temp_bpmnlintrc .bpmnlintrc
+          mv temp_bpmnlintrc "${{ github.workspace }}/.bpmnlintrc"
 
-      - name: Output .bpmnlintrc content
-        run: cat .bpmnlintrc    
-    
+      - name: Read BPMN file content
+        run: |
+          cat "${{ inputs.bpmn-file-path }}" > "${{ github.workspace }}/bpmn-file-content.bpmn"
+
       - name: Run BPMNLint (ignore exit code 1)
-        run: bpmnlint bpmn-file-content.bpmn || true
+        run: bpmnlint "${{ github.workspace }}/bpmn-file-content.bpmn" || true
