--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -44,9 +44,10 @@ jobs:
       - name: Read .bpmnlintrc file
         run: |
           cat "${{ inputs.bpmnlintrc-path }}" > .bpmnlintrc.txt
+          mv .bpmnlintrc.txt .bpmnlintrc
 
       - name: Output .bpmnlintrc content
-        run: cat .bpmnlintrc.txt
+        run: cat .bpmnlintrc
 
       - name: Run BPMNLint (ignore exit code 1)
         run: bpmnlint bpmn-file-content.bpmn || true		
