--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -34,19 +34,17 @@ jobs:
           cp -r ${{ inputs.custom-rules-folder }}/* /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules/
         working-directory: ${{ github.workspace }}  
         
-      - name: List contents of bpmnlint/rules directory
+      - name: List all current rules
         run: ls -al /opt/hostedtoolcache/node/18.17.0/x64/lib/node_modules/bpmnlint/rules
         
       - name: Read BPMN file content
         run: |
           cat "${{ inputs.bpmn-file-path }}" > bpmn-file-content.bpmn
           
-      - name: Read .bpmnlintrc file
+      - name: Read and create .bpmnlintrc file
         run: |
-          cat "${{ inputs.bpmnlintrc-path }}" > .bpmnlintrc
+          cat "${{ inputs.bpmnlintrc-path }}" > .bpmnlintrc.txt
+          mv .bpmnlintrc.txt .bpmnlintrc
 
-      - name: Output .bpmnlintrc content
-        run: cat .bpmnlintrc
-
-      - name: Run BPMNLint (ignore exit code 1)
+      - name: Run BPMN validation and output result  
         run: bpmnlint bpmn-file-content.bpmn || true		
