--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -10,4 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          name: "Lennart"
+          bpmn-files-path: "<path-to-bpmn-files>"
+          custom-rules-folder: "<path-to-custom-rules-folder>"
+          bpmnlintrc-path: "<path-to-bpmnlintrc-config"
