--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -10,6 +10,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          bpmn-files-path: "<path-to-bpmn-files>"
+          bpmn-files-path: "BPMN"
           custom-rules-folder: "<path-to-custom-rules-folder>"
           bpmnlintrc-path: "<path-to-bpmnlintrc-config"
