--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This GitHub Action workflow is designed to streamline the validation process for BPMN files using the bpmn linter provided by [bpmn-io](https://github.com/bpmn-io). It enables you to validate your BPMN files and incorporate user-defined rules.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && ncc build lib/index.js",
+    "build": "tsc && ncc build lib/index.js -o dist",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
