--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -10,9 +10,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
-          bpmn-files-path: "BPMN/"
-          custom-rules-folder: "<path-to-custom-rules-folder>"
-          bpmnlintrc-path: "<path-to-bpmnlintrc-config"
+          bpmn-files-path: "BPMN"
+          custom-rules-folder: "custom_rules"
+          bpmnlintrc-path: "BPMN"
           
       - name: Search for rules folder
         run: find / -type d -name "rules" 2>/dev/null
