--- a/.github/workflows/validate-bpmn.yml
+++ b/.github/workflows/validate-bpmn.yml
@@ -7,12 +7,26 @@ jobs:
   test:
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v3
       - uses: ./
         with:
           bpmn-files-path: "BPMN"
           custom-rules-folder: "custom_rules"
           bpmnlintrc-path: "BPMN"
-          
+
+
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up NodeJs
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18.17.0
+
+      - name: Install bpmnlint
+        run: npm install -g bpmnlint
+
+
       - name: Search for rules folder
         run: find / -type d -name "rules" 2>/dev/null
