--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This GitHub Action workflow is designed to streamline the validation process for BPMN files using the bpmn linter provided by [bpmn-io](https://github.com/bpmn-io). It enables you to validate your BPMN files and incorporate user-defined rules.",
   "main": "index.js",
   "scripts": {
-    "build": "tsc && ncc build lib/index.js -o dist",
+    "build": "tsc && ncc build lib/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,6 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
-    "@vercel/ncc": "^0.36.1",
-    "bpmnlint": "^9.2.0"
+    "@vercel/ncc": "^0.36.1"
   }
 }
